fix navbar function so custom artwork request and artist biography are sent to the collapsed navmenu on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,10 +3,10 @@ html {
 }
 
 body {
-    background: url('img/homepage_gallery_image.webp') no-repeat center center fixed;
+    background: url('/static/img/homepage_gallery_image.webp') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: bisque;
+    background-color: bisque;
     font-family: "Cormorant Upright", serif;
     font-size: 1.2rem;
 }
@@ -17,6 +17,12 @@ body {
     margin: 0 0 16px 0;
     flex-direction: column;
     align-items: center;
+    font-size: 1.2rem;
+}
+
+.home_title {
+    font-size: 2.5rem !important;
+    font-family: "Tangerine", cursive !important;
 }
 
 .colour-block {
@@ -51,6 +57,11 @@ body {
 #topnav {
     background-color: bisque !important;
     border-bottom: 5px solid #86c295 !important;
+}
+
+.list-inline {
+    flex-wrap: nowrap !important;
+    overflow-x: auto !important;
 }
 
 .navbar.navbar-light {
