--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -3,10 +3,10 @@ html {
 }
 
 body {
-    background: url('/media/homepage_gallery_image.JPG') no-repeat center center fixed;
+    background: url('/static/img/homepage_gallery_image.webp') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: bisque;
+    background-color: bisque;
     font-family: "Cormorant Upright", serif;
     font-size: 1.2rem;
 }
@@ -17,6 +17,12 @@ body {
     margin: 0 0 16px 0;
     flex-direction: column;
     align-items: center;
+    font-size: 1.2rem;
+}
+
+.home_title {
+    font-size: 2.5rem !important;
+    font-family: "Tangerine", cursive !important;
 }
 
 .colour-block {
